<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/login_bg"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/mainScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="0.3"/>

        <ImageView
            android:src="@drawable/ic_settings_logo"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="0.7"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="0.4"/>

        <RelativeLayout

            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="1">
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:id="@+id/btFacebook"
                        android:padding="@dimen/bt_login_padding"
                        android:background="@drawable/loginbutton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_login_height">
                        <LinearLayout
                            android:layout_centerInParent="true"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="@dimen/bt_login_height"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_feed_item_header_facebook" />
                            <TextView
                                android:textColor="@color/login_button_text"
                                android:textSize="@dimen/bt_login_text"
                                android:gravity="center_vertical"
                                android:text="@string/login_facebook"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_login_space"/>
                    <RelativeLayout
                        android:id="@+id/btTwitter"
                        android:padding="@dimen/bt_login_padding"
                        android:background="@drawable/loginbutton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_login_height">
                        <LinearLayout
                            android:layout_centerInParent="true"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="@dimen/bt_login_height"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_feed_item_header_twitter" />
                            <TextView
                                android:textColor="@color/login_button_text"
                                android:textSize="@dimen/bt_login_text"
                                android:gravity="center_vertical"
                                android:text="@string/login_twitter"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_login_space"/>
                    <RelativeLayout
                        android:id="@+id/btSkipLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_login_height">
                        <TextView
                            android:paddingLeft="@dimen/bt_login_padding"
                            android:paddingRight="@dimen/bt_login_padding"
                            android:textSize="@dimen/bt_login_text"
                            android:textColor="@color/login_skip_text"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:text="@string/login_skip"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
